--- a/new.html
+++ b/new.html
@@ -30,7 +30,7 @@
          </aside>
         <h1 style="font-size: 135px; font-family: Georgia, 'Times New Roman', Times, serif;" class = "center"><b><i style="color: white">Dogly</i></b></h1>
         <h3 style="color: white" class = "center"><i>"Welcome to your furry friend finder"</i></h3>
- 
+
     </header>
 
     <div class="navbar">
@@ -70,5 +70,5 @@
 
     </footer>
 
-    
 </body>
+</html>
